popup alignment fixed

--- a/src/css/module1.css
+++ b/src/css/module1.css
@@ -116,9 +116,6 @@ li a:hover {
 .editField{
     padding:10px;
 }
-.field{
-    width:50%;
-}
 .btn.btn-default{
     margin:10px;
 }
